--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -1,12 +1,11 @@
 - hosts: localhost
-  connection: local
   gather_facts: False
   tasks:
     - name: Import VPC Variables
       include_vars: vars/vpc_setup
 
     - name: Create VPC
-      ec2_vpc:
+      ec2_vpc_net:
         name: "{{vpc_name}}"
         cidr_block: "{{vpcCidr}}"
         region: "{{region}}"
@@ -15,4 +14,4 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout  
-       
+
