--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -13,5 +13,20 @@
         dns_hostnames: yes
         tenancy: default
         state: "{{state}}"
-      register: vpcout  
+      register: vpcout 
+
+    - debug:
+        var:vpcout
+    - name: Create subnet 1 in zone 1
+      ec2_vpc_subnet:
+        state: "{{state}}"
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{PubSub1Cidr}}"
+        region: "{{region}}"
+        az : "{{zone1}}"
+        map_public : yes
+        tags:
+          Name: ansible-pubsub1
+      register: pubsub1_out
+   
 
