--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -15,9 +15,10 @@
         state: "{{state}}"
       register: vpcout 
 
-    - debug:
-        var: vpcout
-    - name: Create subnet 1 in zone 1
+#    - debug:
+#       var: vpcout
+
+    - name: Create public subnet 1 in zone 1
       ec2_vpc_subnet:
         state: "{{state}}"
         vpc_id: "{{vpcout.vpc.id}}"
@@ -28,3 +29,63 @@
         tags:
           Name: ansible-pubsub1
       register: pubsub1_out
+
+    - name: Create public subnet 2 in zone 2
+      ec2_vpc_subnet:
+        state: "{{state}}"
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{PubSub2Cidr}}"
+        region: "{{region}}"
+        az : "{{zone2}}"
+        map_public : yes
+        tags:
+          Name: ansible-pubsub2
+      register: pubsub2_out  
+
+    - name: Create public subnet 3 in zone 3
+      ec2_vpc_subnet:
+        state: "{{state}}"
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{PubSub3Cidr}}"
+        region: "{{region}}"
+        az : "{{zone3}}"
+        map_public : yes
+        tags:
+          Name: ansible-pubsub3
+      register: pubsub3_out          
+
+    - name: Create private subnet 1 in zone 1
+      ec2_vpc_subnet:
+        state: "{{state}}"
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{PrivSub1Cidr}}"
+        region: "{{region}}"
+        az : "{{zone1}}"
+        map_public : yes
+        tags:
+          Name: ansible-privsub1
+      register: privsub1_out
+      
+    - name: Create private subnet 2 in zone 2
+      ec2_vpc_subnet:
+        state: "{{state}}"
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{PrivSub2Cidr}}"
+        region: "{{region}}"
+        az : "{{zone2}}"
+        map_public : yes
+        tags:
+          Name: ansible-privsub2
+      register: privsub2_out 
+
+    - name: Create private subnet 3 in zone 3
+      ec2_vpc_subnet:
+        state: "{{state}}"
+        vpc_id: "{{vpcout.vpc.id}}"
+        cidr: "{{PrivSub3Cidr}}"
+        region: "{{region}}"
+        az : "{{zone3}}"
+        map_public : yes
+        tags:
+          Name: ansible-privsub3
+      register: privsub3_out
