changed yaml file

--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -135,5 +135,5 @@
           - "{{ privsub3_out.subnet.id }}"
         routes:
           - dest: 0.0.0.0/0 
-            gateway_id: "{{NATGW_out.gateway_id}}"
+            gateway_id: "{{NATWG_out.gateway_id}}"
       register: privRT_out
