--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -137,3 +137,18 @@
           - dest: 0.0.0.0/0 
             gateway_id: "{{NATWG_out.gateway_id}}"
       register: privRT_out
+
+    - debug:
+       var: "{{item}}"
+      loop:
+        - vpcout.vpc.id
+        - pubsub1_out.subnet.id
+        - pubsub2_out.subnet.id
+        - pubsub3_out.subnet.id
+        - privsub1_out.subnet.id
+        - privsub2_out.subnet.id
+        - privsub3_out.subnet.id
+        - igw_out.gateway_id
+        - pubRT_out.route_table.id
+        - NATWG_out.nat_gateway_id
+        - privsub1_out.route_table.id       
