--- a/bastion_instance.yml
+++ b/bastion_instance.yml
@@ -58,4 +58,11 @@
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out
 
+    - name: Insert/Update "BastionSGid" in vars/vpc-output_vars
+      blockinfile:
+        path: vars/output_vars
+        backup: yes
+        block: |
+          BastionSGid: {{BastionSG_out.group_id}}  
+
       
