--- a/ec2stack.yml
+++ b/ec2stack.yml
@@ -53,6 +53,17 @@
             from_port: 22
             to_port: 22
             group_id: "{{BastionSGid}}"
-      register: appStackSG_out  
+      register: appStackSG_out
+
+    - name: Update Securiry Group with its own sg id
+      ec2_group:
+        name: appstack-sg
+        description: Allow port 22 from everywhere and all port within sg
+        region: "{{region}}"
+        vpc_id: "{{vpcid}}"
+        purge_rules: no
+        rules:
+          - proto: all
+            group_id: "{{appStackSG_out.group_id}}"  
   
 
