--- a/ec2stack.yml
+++ b/ec2stack.yml
@@ -211,7 +211,7 @@
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
       blockinfile:
-        path: provision-stack/inventory-vpro
+        path: Lab\ansible-full-stack\provision-stack/inventory-vpro
         block: |
           web01 ansible_host={{ web01_out.tagged_instances[0].private_ip }}
           app01 ansible_host={{ app01_out.tagged_instances[0].private_ip }}
