--- a/ec2stack.yml
+++ b/ec2stack.yml
@@ -194,7 +194,7 @@
 
     - name: Insert/Update Hosts IP & Name in file provision-stack/group_vars/hostsip
       blockinfile:
-        path: Lab\ansible-full-stack\provision-stack\group_vars\hostsip
+        path: Lab\ansible-full-stack\ansible-full-stack\provision-stack\group_vars\hostsip
         block: |
           web01_ip: {{ web01_out.tagged_instances[0].private_ip }}
           app01_ip: {{ app01_out.tagged_instances[0].private_ip }}
@@ -211,7 +211,7 @@
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
       blockinfile:
-        path: Lab\ansible-full-stack\provision-stack\inventory-vpro
+        path: Lab\ansible-full-stack\ansible-full-stack\provision-stack\inventory-vpro
         block: |
           web01 ansible_host={{ web01_out.tagged_instances[0].private_ip }}
           app01 ansible_host={{ app01_out.tagged_instances[0].private_ip }}
